@@ -132,6 +132,10 @@ SOURCE=.\MakePatchDirsDlg.cpp
 # End Source File
 # Begin Source File
 
+SOURCE=.\Satellites.cpp
+# End Source File
+# Begin Source File
+
 SOURCE=.\StdAfx.cpp
 # ADD CPP /Yc"stdafx.h"
 # End Source File
@@ -178,6 +182,10 @@ SOURCE=.\MakePatchDirsDlg.h
 # Begin Source File
 
 SOURCE=.\Resource.h
+# End Source File
+# Begin Source File
+
+SOURCE=.\Satellites.h
 # End Source File
 # Begin Source File
 
