@@ -22,6 +22,7 @@
 #define IDC_EXCLUDE_VC_STUFF            1008
 #define IDC_EXCLUDE_RCS_STUFF2          1009
 #define IDC_EXCLUDE_RCS_STUFF           1009
+#define IDC_LANGS                       1010
 
 // Next default values for new objects
 // 
@@ -29,7 +30,7 @@
 #ifndef APSTUDIO_READONLY_SYMBOLS
 #define _APS_NEXT_RESOURCE_VALUE        129
 #define _APS_NEXT_COMMAND_VALUE         32771
-#define _APS_NEXT_CONTROL_VALUE         1009
+#define _APS_NEXT_CONTROL_VALUE         1011
 #define _APS_NEXT_SYMED_VALUE           101
 #endif
 #endif
